--- a/Code/app/src/main/res/layout/fragment_edit_user.xml
+++ b/Code/app/src/main/res/layout/fragment_edit_user.xml
@@ -116,6 +116,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Họ và Tên"
+        android:textColorHint="@color/white"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         android:textColorLink="@color/Txt_Chu"
@@ -143,6 +144,7 @@
         android:layout_marginEnd="8dp"
         android:hint="@string/facebook_app_id"
         android:textSize="18dp"
+        android:textColorHint="@color/white"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -180,6 +182,7 @@
         android:hint="1/1/1990"
         android:inputType="datetime"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
