--- a/Code/app/src/main/res/layout/fragment_sharesocial_video.xml
+++ b/Code/app/src/main/res/layout/fragment_sharesocial_video.xml
@@ -2,9 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
-
 
     <TextView
         android:id="@+id/tvSocialShareWithAction"
@@ -17,83 +16,38 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/linearLayoutSocialNetwork"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:scrollbarStyle="insideOverlay"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewShareSocial"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSocialShareWithAction">
+        app:layout_constraintTop_toBottomOf="@+id/tvSocialShareWithAction"
+        >
+    </android.support.v7.widget.RecyclerView>
 
-      <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Google plus"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_googleplus" />
+    <View
+        android:id="@+id/viewVideoShareSocial"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="10dp"
+        android:background="@android:color/black"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewShareSocial"
+        >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Messenger"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_messenger" />
+    </View>
 
-        <TextView
-            android:id="@+id/tvFacebookShare"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Facebook"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_facebook" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewShareDuet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewVideoShareSocial"
+        >
+    </android.support.v7.widget.RecyclerView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Instagram"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_instagram" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gmail"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_gmail" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Skype"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_skype" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Copy link"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_copy" />
-
-        <TextView
-            android:id="@+id/tvShareMore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="..."
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:drawableTop="@drawable/icon_video_share_more" />
-
-    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
