--- a/Code/app/src/main/res/layout/fragment_item_video.xml
+++ b/Code/app/src/main/res/layout/fragment_item_video.xml
@@ -92,16 +92,26 @@
         app:layout_constraintRight_toRightOf="@+id/imvComment"
         />
 
-    <ImageView
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imvAvatarUpload"
-        android:padding="5dp"
-        android:src="@drawable/icon_video_avatar"
-        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/imvLike"
         app:layout_constraintRight_toRightOf="@+id/imvLike"
-        />
+        app:cardCornerRadius="50dp"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imvAvatarUpload"
+            android:padding="5dp"
+            android:src="@drawable/icon_video_avatar"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/imvLike"
+            app:layout_constraintRight_toRightOf="@+id/imvLike"
+            />
+
+    </android.support.v7.widget.CardView>
+
 
 
 
