--- a/Code/app/src/main/res/layout/itempickvuivc.xml
+++ b/Code/app/src/main/res/layout/itempickvuivc.xml
@@ -22,12 +22,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:text="TextView"
         android:textColor="@color/txtchuden"
         app:layout_constraintBottom_toBottomOf="@+id/imgAnhSever"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgAnhSever"
         app:layout_constraintTop_toTopOf="@+id/imgAnhSever"
         app:layout_constraintVertical_bias="0.495" />
+
+    <RadioButton
+        android:id="@+id/rbanhchon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:checked="false"
+        app:layout_constraintBottom_toBottomOf="@+id/txtTenAnh"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtTenAnh"
+        app:layout_constraintTop_toTopOf="@+id/txtTenAnh" />
 </android.support.constraint.ConstraintLayout>
