--- a/Code/app/src/main/res/layout/fragment_home.xml
+++ b/Code/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:text="abc"
         />
 
     <android.support.design.widget.TabLayout
