--- a/Code/app/src/main/res/layout/fragment_profileuser_main.xml
+++ b/Code/app/src/main/res/layout/fragment_profileuser_main.xml
@@ -10,9 +10,9 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="160dp"
+            android:layout_height="120dp"
             android:background="@drawable/bg"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"></LinearLayout>
@@ -46,7 +46,7 @@
         android:layout_width="106dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8sp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="8sp"
         app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
         app:layout_constraintHorizontal_bias="0.13"
@@ -67,11 +67,14 @@
 
     <TextView
         android:id="@+id/txtTenUser"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:ellipsize="end"
+        android:gravity="start"
         android:text="a"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="19dp"
         app:layout_constraintEnd_toEndOf="@+id/frlo"
         app:layout_constraintStart_toStartOf="@+id/frlo"
         app:layout_constraintTop_toBottomOf="@+id/frlo" />
